--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Univer - {% block title %}{% endblock title %}</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/carousel/">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="{% static 'img/favicon.ico' %}">
     <link href="{% static 'css/base.css' %}" rel="stylesheet">
     <script src="https://code.jqery.com/jquery-latest.js"></script>
