--- a/templates/account/reg_res.html
+++ b/templates/account/reg_res.html
@@ -1,9 +1,10 @@
 {% extends 'layouts/base.html' %}
-{% block title %}Sign on result{% endblock title %}
-{% block caption %}Sign on result page{% endblock caption %}
+{% block title %}Звіт про реєстрацію{% endblock title %}
+{% block caption %}Сторінка звіту про реєстрацію{% endblock caption %}
 
 {% block content %}
     <div class="container">
-        <h3>Sign on result page content</h3>
+        <h3>Звіт про реєстрацію</h3>
+        <h4 style="color: navy;">{{ msg }}</h4>
     </div>    
 {% endblock content %}
