--- a/templates/account/reg.html
+++ b/templates/account/reg.html
@@ -8,7 +8,7 @@
         <h3>Sign on page content</h3>
         <div class="row justify-content-center">
             <div class="col-lg-10">
-                <form id="reg-form" method="post" action="action/reg" onsubmit="return true">
+                <form id="reg-form" method="post" action="/account/reg" onsubmit="return true">
                     {% csrf_token %}
                     <div class="form-group">
                         Login: <br/>
