--- a/templates/account/reg_res.html
+++ b/templates/account/reg_res.html
@@ -6,5 +6,6 @@
     <div class="container">
         <h3>Звіт про реєстрацію</h3>
         <h4 style="color: navy;">{{ msg }}</h4>
+        <h4 style="color: darkcyan;">{{ info }}</h4>
     </div>    
 {% endblock content %}
