--- a/templates/account/reg.html
+++ b/templates/account/reg.html
@@ -1,37 +1,37 @@
 {% extends 'layouts/base.html' %}
-{% block title %}Sign on{% endblock title %}
-{% block caption %}Sign on page{% endblock caption %}
+{% block title %}Реєстрація{% endblock title %}
+{% block caption %}Сторінка реєстрації{% endblock caption %}
 
 {% block content %}
 {% load static %}
     <div class="container">
-        <h3>Sign on page content</h3>
+        <h3>Реєстрація</h3>
         <div class="row justify-content-center">
-            <div class="col-lg-10">
-                <form id="reg-form" method="post" action="action/reg" onsubmit="return true">
+            <div class="col-4 col-offset-4">
+                <form id="reg-form" method="post" action="/account/reg">
                     {% csrf_token %}
                     <div class="form-group">
                         Login: <br/>
-                        <input type="text" id="login" name="login" required/>
-                        <img id="login-ico" src="{% static 'img/question.png' %}" class="icon">
+                        <input type="text" id="login" name="login" class="form-control" required/>
+
                         <div class="error" id="login-err"></div>
                     </div>
                     <div class="form-group mt-3">
                         Password: <br/>
-                        <input type="password" id="pass1" name="pass1" required/>
-                        <img id="pass1-ico" src="{% static 'img/question.png' %}" class="icon">
+                        <input type="password" id="pass1" name="pass1" class="form-control" required/>
+
                         <div class="error" id="pass1-err"></div>
                     </div>
                     <div class="form-group mt-3">
                         Repeat password: <br/>
-                        <input type="password" id="pass2" name="pass2" required/>
-                        <img id="pass2-ico" src="{% static 'img/question.png' %}" class="icon">
+                        <input type="password" id="pass2" name="pass2" class="form-control" required/>
+
                         <div class="error" id="pass2-err"></div>
                     </div>
                     <div class="form-group mt-3">
                         E-Mail: <br/>
-                        <input type="email" id="email" name="email" required/>
-                        <img id="email-ico" src="{% static 'img/question.png' %}" class="icon">
+                        <input type="email" id="email" name="email" class="form-control" required/>
+                        
                         <div class="error" id="email-err"></div>
                     </div>
                     <div class="mt-3 text-center">
