--- a/templates/account/entry_res.html
+++ b/templates/account/entry_res.html
@@ -1,9 +1,10 @@
 {% extends 'layouts/base.html' %}
-{% block title %}Autorize result{% endblock title %}
-{% block caption %}Autorize result page{% endblock caption %}
+{% block title %}Звіт про авторизацію{% endblock title %}
+{% block caption %}Сторінка звіту про авторизацію{% endblock caption %}
 
 {% block content %}
     <div class="container">
-        <h3>Autorize result page content</h3>
+        <h3>Звіт про авторизацію</h3>
+        <h4 style="color: navy;">{{ msg }}</h4>
     </div>    
 {% endblock content %}
