--- a/templates/account/entry.html
+++ b/templates/account/entry.html
@@ -1,9 +1,30 @@
 {% extends 'layouts/base.html' %}
-{% block title %}Autorize{% endblock title %}
-{% block caption %}Autorize page{% endblock caption %}
+{% block title %}Авторизація{% endblock title %}
+{% block caption %}Сторінка Авторизації{% endblock caption %}
+{% load static %}
 
 {% block content %}
-    <div class="container">
-        <h3>Autorize page content</h3>
-    </div>    
+<div class="container">
+    <h3>Авторизація</h3>
+    <div class="row">
+        <form id="reg-form" method="post" action="/account/entry" class="col-4 col-offset-4">
+            {% csrf_token %}
+            <div class="form-group">
+                Логін: <br/>
+                <input type="text" id="login" name="login" class="form-control" required/>
+                <div class="error" id="login-err"></div>
+            </div>
+            <div class="form-group mt-3">
+                Пароль: <br/>
+                <input type="password" id="pass1" name="pass1" class="form-control" required/>
+                <div class="error" id="pass1-err"></div>
+            </div>
+            
+            <div class="mt-3 text-center">
+                <input id="submit" type="submit" value="Увійти" class="btn btn-success btn-sm b1"/>
+                <input id="reset" type="reset" value="Відміна" class="btn btn-danger btn-sm b1"/>
+            </div>
+        </form>
+    </div>
+</div>    
 {% endblock content %}
